--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     class="base-select create-project-description__input _shadow _large"
                   >
                     <span class="base-input__label">
-                      När ska uppdraget vara klart?
+                      Förväntat startdatum?
                     </span>
 
                     <div id="onskar-button" class="base-select__select">
@@ -270,10 +270,10 @@
                       class="base-input__input"
                     />
                   </label>
-                </div>
 
-                <div class="create-project-description__row">
+                  <!-- <div class="create-project-description__row"> -->
                   <div
+                    style="width: calc(50% - 5px)"
                     id="representerar-select"
                     class="base-select create-project-description__input _shadow _large"
                   >
@@ -321,6 +321,7 @@
                       </div>
                     </div>
                   </div>
+                  <!-- </div> -->
                 </div>
 
                 <div style="justify-content: start" class="auth-form__row">
