--- a/index.html
+++ b/index.html
@@ -271,7 +271,6 @@
                     />
                   </label>
 
-                  <!-- <div class="create-project-description__row"> -->
                   <div
                     style="width: calc(50% - 5px)"
                     id="representerar-select"
@@ -321,10 +320,12 @@
                       </div>
                     </div>
                   </div>
-                  <!-- </div> -->
                 </div>
 
-                <div style="justify-content: start" class="auth-form__row">
+                <div
+                  style="justify-content: start; margin-top: -20px"
+                  class="auth-form__row"
+                >
                   <label
                     for="agree"
                     id="auth-form-agree"
