--- a/arrangement.html
+++ b/arrangement.html
@@ -13,7 +13,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/1077E191-49F8-45FF-9AF8-461206D96D6E.jpeg"
+          src="./img/It offerter.jpg"
           alt=""
           style="object-position: top top; object-fit: cover"
         />
