change this one

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/app.css" />
     <link rel="stylesheet" href="./css/home.css" />
-    <title>Document</title>
+    <title>Hitta rätt webbutvecklare - Jämför offerter</title>
   </head>
   <body>
     <div id="app" class="app">
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/89983F71-77B9-4732-92BB-EC9A7251060B.jpeg"
+          src="./img/It offerter.jpg"
           style="object-position: top top; object-fit: cover"
         />
 
