--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/It offerter.jpg"
-          style="object-position: top top; object-fit: cover"
+          src="./img/4.af3a5b8a.jpg"
+          style="object-position: center top; object-fit: cover"
         />
 
         <div class="the-header__top">
