--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                     rows="10"
                     id="beskrivning"
                     class="base-input__input"
+                    style="box-shadow: none; border: 2px solid #e1e1e1"
                     placeholder="Beskriv uppdraget i detalj för att underlätta offertlämningen från webbyrån."
                   ></textarea>
                 </label>
